sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/Onboarding_Task_Config__c.object-meta.xml
<CustomObject>
    <label>Onboarding Task Config</label>
    <nameField>
        <displayFormat>OT-{00000000}</displayFormat>
        <label>Onboarding Tasks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Tasks Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>