sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Bamboo HR Tasks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>