sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/fields/Departmental_On_boarding__c.field-meta.xml
<CustomField>
    <fullName>Departmental_On_boarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks whether the on-boarding task is departmental</description>
    <inlineHelpText>Checks whether the on-boarding task is departmental</inlineHelpText>
    <label>Departmental On-boarding ?</label>
    <type>Checkbox</type>
</CustomField>