sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/fields/Employee_Role__c.field-meta.xml
<CustomField>
    <fullName>Employee_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Role</label>
    <referenceTo>Employee_Role__c</referenceTo>
    <relationshipName>Onboarding_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>