sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/fields/Global_On_boarding__c.field-meta.xml
<CustomField>
    <fullName>Global_On_boarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks whether the on-boarding task is global or specific based on an employee role</description>
    <inlineHelpText>Checks whether the on-boarding task is global or specific based on an employee role</inlineHelpText>
    <label>Global On-boarding ?</label>
    <type>Checkbox</type>
</CustomField>