sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/fields/No_of_Days_After_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_After_Hire_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The on-boarding will be done after &#39;X&#39; number of days from the date of hiring an Employee</description>
    <inlineHelpText>The on-boarding will be done after &#39;X&#39; number of days from the date of hiring an Employee</inlineHelpText>
    <label>No. of Days After Hire Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>