sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/fields/On_boarding_Done_By__c.field-meta.xml
<CustomField>
    <fullName>On_boarding_Done_By__c</fullName>
    <label>On-boarding Done By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Line Manager</fullName>
            </value>
            <value>
                <fullName>Talent Partner</fullName>
            </value>
            <value>
                <fullName>Specific User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>