sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/fields/Onboarding_for__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_for__c</fullName>
    <description>On-boarding for which role(s)</description>
    <inlineHelpText>On-boarding for which role(s)</inlineHelpText>
    <label>On-boarding for ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All roles</fullName>
            </value>
            <value>
                <fullName>All roles in a department</fullName>
            </value>
            <value>
                <fullName>Specific role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>