sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/validationRules/AddAssignedToIfOnboardingBySpecificUser.validationRule-meta.xml
<ValidationRule>
    <fullName>AddAssignedToIfOnboardingBySpecificUser</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(  Assigned_To__c ) , ISPICKVAL(  On_boarding_Done_By__c  , &#39;Specific User&#39;) )</errorConditionFormula>
    <errorDisplayField>Assigned_To__c</errorDisplayField>
    <errorMessage>Add the person the task is assigned to</errorMessage>
</ValidationRule>