sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/validationRules/AddEmployee_Role_If_Specific_Role_Chosen.validationRule-meta.xml
<ValidationRule>
    <fullName>AddEmployee_Role_If_Specific_Role_Chosen</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISBLANK( Employee_Role__c )  , ISPICKVAL( Onboarding_for__c , &#39;Specific role&#39;) )</errorConditionFormula>
    <errorDisplayField>Employee_Role__c</errorDisplayField>
    <errorMessage>Add the Employee Role</errorMessage>
</ValidationRule>