sfSandBoxCode/force-app/main/default/objects/Onboarding_Task_Config__c/listViews/Onboarding_Tasks.listView-meta.xml
<ListView>
    <fullName>Onboarding_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Task_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Employee_Role__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Global_On_boarding__c</columns>
    <columns>Departmental_On_boarding__c</columns>
    <columns>No_of_Days_After_Hire_Date__c</columns>
    <columns>On_boarding_Done_By__c</columns>
    <columns>Onboarding_for__c</columns>
    <filterScope>Everything</filterScope>
    <label>Onboarding Tasks</label>
</ListView>